Change levels of headings

--- a/_posts/2018-06-03-veusz-3d.md
+++ b/_posts/2018-06-03-veusz-3d.md
@@ -8,7 +8,7 @@ Veusz 3.0 includes support for 3D plots. Currently implemented plot
 types include point plots, surface plots, functional surface and line
 plots and volume plots. This post is a guide for how this works.
 
-# The 3D scene (scene3d)
+## The 3D scene (scene3d)
 
 3D plotting in Veusz uses the same widget scheme as 2D plotting, but
 first the user should add a 3D scene widget (scene3d) to the
@@ -16,10 +16,10 @@ page. Alternatively, the user can make a new document with a 3D graph
 (see the File, New menu). The scene is a 3D volume which is viewed on
 the page. All 3D widgets must be placed within a scene or its
 subwidgets. The scene controls the viewing angle to the 3D widgets and
-the distance of the origin of the graph to the viewer. [See
-below](#rendering) for more details for how the rendering works.
+the distance of the origin of the graph to the viewer. See Rendering
+below for more details about how the rendering works.
 
-## Sizing
+### Sizing
 
 By default the view of the scene is automatically scaled up to fill
 the bounding box of the scene3d widget. This is controlled by the
@@ -28,7 +28,7 @@ to be a number which gives the scaling. Fixed scales can be useful to
 give a consistent plot size which does not vary by viewing angle,
 which is helpful to create animations.
 
-## Viewing angle
+### Viewing angle
 
 The viewing angle is specified by the user as three rotation angles in
 degrees around three axes. These axes are not the axes of any
@@ -36,7 +36,7 @@ graphs. The z axis lies along the line of sight through the 3D
 origin. The x axis lies horizontally on the page through the 3D
 origin. The y axis lies vertically on the page through that origin.
 
-## Distance
+### Distance
 
 The origin is the default location of a 3D graph. It lies at a
 distance to the viewer controlled by the "Distance" setting of the
@@ -49,7 +49,7 @@ Distance 5                                         | Distance 50
 :-------------------------------------------------:|:----------------------------------------------------:
 ![Graph of distance 5](/media/3d_errors_dist5.png) | ![Graph of distance 50](/media/3d_errors_dist50.png)
 
-## Lighting
+### Lighting
 
 The colour of solid surfaces is determined by their intrinsic colour,
 plus an additive effect of lighting. The angle from the light source,
@@ -60,7 +60,7 @@ the light sources are defined relative to the camera or viewer, not
 the graph. Positive values for X, Y and Z positions lie to the right,
 upwards and towards the graph, respectively.
 
-# Line widths and marker sizes
+## Line widths and marker sizes
 
 Normally in Veusz, sizes of objects (e.g. plot markers) are given in
 physical units. This makes less sense for a 3D plot as sizes can
@@ -68,7 +68,7 @@ depend on distance. In a 3D graph sizes of plotting markers and line
 widths are given in 1/1000 of the graph bounding box maximum
 dimension.
 
-# The 3D graph (graph3d)
+## The 3D graph (graph3d)
 
 One or more 3D graph widgets are placed in the scene3d widget. The
 default location in 3D space of this widget is the origin 0,0,0. If
@@ -79,7 +79,7 @@ viewer/camera, then the output will look strange.  The graph has
 formatting settings for its surrounding lines and the surface of the
 rear faces.
 
-# 3D axes (axis3d)
+## 3D axes (axis3d)
 
 The 3D graph contains three or more 3D axis (axis3d) widgets, with at
 least one for each dimension. This is analogous to the standard 2D
@@ -93,7 +93,7 @@ Similarly to the 2D axis, the 3D axis has positions which allow it to
 appear mid-way down the cube in the other dimensions. This allows the
 user to add multiple non-overlapping axes for each dimension.
 
-# 3D plotters
+## 3D plotters
 
 Similarly to the 2D graph, the 3D graph contains one or more
 plotters. Unlike the 2D graph, the ordering does not matter. We list
@@ -112,7 +112,7 @@ formatting settings (for marker fill and line).
 The point plotter also supports error bars in each dimension,
 similarly to the 2D plot.
 
-## 3D function plotter (function3d)
+### 3D function plotter (function3d)
 
 Plots either a functional line in 3D space or a functional
 surface. The type of plot is given by the mode parameter. In the case
@@ -127,7 +127,7 @@ hidden or shown. There are also settings giving the number of function
 evaluations to compute in each direction for a surface, or in one
 direction for a line.
 
-## 3D surface plotter (surface3d)
+### 3D surface plotter (surface3d)
 
 Plots a two dimensional surface from data values. The user should
 provide a 2D dataset for the height of a surface. The x, y or z axis
@@ -140,7 +140,7 @@ surface by two triangles. If a high resolution option is enabled, the
 each grid point is surrounded by eight lines and the surface drawn by
 eight triangles.
 
-## 3D volume plotter (volume3d)
+### 3D volume plotter (volume3d)
 
 Plots 3D volumes drawn as rectangular cubes. In this widget, for a
 volume described by A×B×C values, then the user should provide four
@@ -153,7 +153,7 @@ color=(0.1,0.2,0.3,0.4,0.3,0.2,0.1,0). Additionally, the user can
 provide a transparency dataset, which can be useful for showing or
 hiding parts of the 3D space.
 
-# Rendering and output issues
+## Rendering and output issues
 
 Note that Veusz does not use a standard method for making 3D output
 (e.g. OpenGL). This is so Veusz can produce vector rather than bitmap
@@ -183,7 +183,7 @@ if two triangles are plotted next to each other, the drawing of smooth
 (anti-aliased) edges causes the gap to be visible. This is also seen
 in PDF output as PDF viewers do a similar thing.
 
-# Possible future improvements
+## Possible future improvements
 
   * Better algorithm than Painter's or BSP for rendering
 
