--- a/_posts/2018-06-03-veusz-3d.md
+++ b/_posts/2018-06-03-veusz-3d.md
@@ -79,6 +79,10 @@ viewer/camera, then the output will look strange.  The graph has
 formatting settings for its surrounding lines and the surface of the
 rear faces.
 
+Multiple 3D graph widgets in a single scene           |
+:-----------------------------------------------------:
+![Multiple graph3d widgets](/media/3d_multigraph.png) |
+
 ## 3D axes (axis3d)
 
 The 3D graph contains three or more 3D axis (axis3d) widgets, with at
@@ -92,6 +96,10 @@ in that dimension or to the axis labels.
 Similarly to the 2D axis, the 3D axis has positions which allow it to
 appear mid-way down the cube in the other dimensions. This allows the
 user to add multiple non-overlapping axes for each dimension.
+
+Multiple 3D axis widgets in a single graph          |
+:---------------------------------------------------:
+![Multiple axis3d widgets](/media/3d_multiaxes.png) |
 
 ## 3D plotters
 
@@ -112,6 +120,10 @@ formatting settings (for marker fill and line).
 The point plotter also supports error bars in each dimension,
 similarly to the 2D plot.
 
+3D point plotting example                     |
+:---------------------------------------------:
+![point3d example](/media/3d_points.png)      |
+
 ### 3D function plotter (function3d)
 
 Plots either a functional line in 3D space or a functional
@@ -127,6 +139,10 @@ hidden or shown. There are also settings giving the number of function
 evaluations to compute in each direction for a surface, or in one
 direction for a line.
 
+3d line function                                  | 3d surface function                                    |
+:------------------------------------------------:|:-------------------------------------------------------:
+![function3d (line)](/media/3d_function_line.png) | ![function3d 9surface)](/media/3d_function_surface.png)|
+
 ### 3D surface plotter (surface3d)
 
 Plots a two dimensional surface from data values. The user should
@@ -140,6 +156,10 @@ surface by two triangles. If a high resolution option is enabled, the
 each grid point is surrounded by eight lines and the surface drawn by
 eight triangles.
 
+3D surface plotting example                   |
+:---------------------------------------------:
+![surface3d example](/media/3d_surface.png)   |
+
 ### 3D volume plotter (volume3d)
 
 Plots 3D volumes drawn as rectangular cubes. In this widget, for a
@@ -152,6 +172,10 @@ Y=(0,0,1,1,0,0,1,1), Z=(0,1,0,1,0,1,0,1),
 color=(0.1,0.2,0.3,0.4,0.3,0.2,0.1,0). Additionally, the user can
 provide a transparency dataset, which can be useful for showing or
 hiding parts of the 3D space.
+
+3D volume example                             |
+:---------------------------------------------:
+![volume3d example](/media/3d_volume.png)     |
 
 ## Rendering and output issues
 
