Fix function table

--- a/_posts/2018-06-03-veusz-3d.md
+++ b/_posts/2018-06-03-veusz-3d.md
@@ -141,7 +141,7 @@ direction for a line.
 
 |3d line function                                  | 3d surface function                                    |
 |--------------------------------------------------|--------------------------------------------------------|
-|[function3d (line)](/media/3d_function_line.png)  | ![function3d 9surface)](/media/3d_function_surface.png)|
+|![function3d (line)](/media/3d_function_line.png) | ![function3d (surface)](/media/3d_function_surface.png)|
 
 ### 3D surface plotter (surface3d)
 
