Add link to vsz file for mandel example

--- a/_posts/2018-06-03-veusz-3d.md
+++ b/_posts/2018-06-03-veusz-3d.md
@@ -156,9 +156,9 @@ surface by two triangles. If a high resolution option is enabled, the
 each grid point is surrounded by eight lines and the surface drawn by
 eight triangles.
 
-|3D surface plotting example                   |
-|----------------------------------------------|
-|![surface3d example](/media/3d_surface.png)   |
+|[3D surface plotting example](/media/3d_mandel_surface.vsz) |
+|------------------------------------------------------------|
+|![surface3d example](/media/3d_mandel_surface.png)          |
 
 ### 3D volume plotter (volume3d)
 
