Add more source files

--- a/_posts/2018-06-03-veusz-3d.md
+++ b/_posts/2018-06-03-veusz-3d.md
@@ -79,9 +79,9 @@ viewer/camera, then the output will look strange.  The graph has
 formatting settings for its surrounding lines and the surface of the
 rear faces.
 
-|Multiple 3D graph widgets in a single scene           |
-|------------------------------------------------------|
-|![Multiple graph3d widgets](/media/3d_multigraph.png) |
+|[Multiple 3D graph widgets in a single scene](/media/3d_multigraph.vsz)|
+|-----------------------------------------------------------------------|
+|![Multiple graph3d widgets](/media/3d_multigraph.png)                  |
 
 ## 3D axes (axis3d)
 
@@ -97,9 +97,9 @@ Similarly to the 2D axis, the 3D axis has positions which allow it to
 appear mid-way down the cube in the other dimensions. This allows the
 user to add multiple non-overlapping axes for each dimension.
 
-|Multiple 3D axis widgets in a single graph          |
-|----------------------------------------------------|
-|![Multiple axis3d widgets](/media/3d_multiaxes.png) |
+|[Multiple 3D axis widgets in a single graph](/media/3d_multiaxes.vsz) |
+|----------------------------------------------------------------------|
+|![Multiple axis3d widgets](/media/3d_multiaxes.png)                   |
 
 ## 3D plotters
 
@@ -120,9 +120,9 @@ formatting settings (for marker fill and line).
 The point plotter also supports error bars in each dimension,
 similarly to the 2D plot.
 
-|3D point plotting example                     |
-|----------------------------------------------|
-|![point3d example](/media/3d_points.png)      |
+|[3D point plotting example](/media/3d_points.vsz)|
+|-------------------------------------------------|
+|![point3d example](/media/3d_points.png)         |
 
 ### 3D function plotter (function3d)
 
@@ -139,7 +139,7 @@ hidden or shown. There are also settings giving the number of function
 evaluations to compute in each direction for a surface, or in one
 direction for a line.
 
-|3d line function                                  | 3d surface function                                    |
+|[3d line function](/media/3d_function_line.vsz)   | 3d surface function                                    |
 |--------------------------------------------------|--------------------------------------------------------|
 |![function3d (line)](/media/3d_function_line.png) | ![function3d (surface)](/media/3d_function_surface.png)|
 
@@ -173,7 +173,7 @@ color=(0.1,0.2,0.3,0.4,0.3,0.2,0.1,0). Additionally, the user can
 provide a transparency dataset, which can be useful for showing or
 hiding parts of the 3D space.
 
-|3D volume example                             |
+|[3D volume example](/media/3d_volume.vsz)     |
 |----------------------------------------------|
 |![volume3d example](/media/3d_volume.png)     |
 
