New function surface example

--- a/_posts/2018-06-03-veusz-3d.md
+++ b/_posts/2018-06-03-veusz-3d.md
@@ -139,7 +139,7 @@ hidden or shown. There are also settings giving the number of function
 evaluations to compute in each direction for a surface, or in one
 direction for a line.
 
-|[3d line function](/media/3d_function_line.vsz)   | 3d surface function                                    |
+|[3d line function](/media/3d_function_line.vsz)   |[3d surface function](/media/3d_function_surface.vsz)   |
 |--------------------------------------------------|--------------------------------------------------------|
 |![function3d (line)](/media/3d_function_line.png) | ![function3d (surface)](/media/3d_function_surface.png)|
 
