Add reflection example

--- a/_posts/2018-06-03-veusz-3d.md
+++ b/_posts/2018-06-03-veusz-3d.md
@@ -60,6 +60,10 @@ the light sources are defined relative to the camera or viewer, not
 the graph. Positive values for X, Y and Z positions lie to the right,
 upwards and towards the graph, respectively.
 
+|[Light angle 1](/media/3d_refl_1.vsz) |[Light angle 2](/media/3d_refl_2.vsz) |
+|--------------------------------------|--------------------------------------|
+|![Light angle 1](/media/3d_refl_1.png)|![Light angle 2](/media/3d_refl_2.png)|
+
 ## Line widths and marker sizes
 
 Normally in Veusz, sizes of objects (e.g. plot markers) are given in
