Switch on reflective line

--- a/_posts/2018-06-03-veusz-3d.md
+++ b/_posts/2018-06-03-veusz-3d.md
@@ -51,14 +51,15 @@ the default automatic scaling, the size on the page does not change.
 
 ### Lighting
 
-The colour of solid surfaces is determined by their intrinsic colour,
-plus an additive effect of lighting. The angle from the light source,
-the light source colour and intensity and the surface reflectively are
-used to calculate an additional colour contribution to the surface. Up
-to three light sources can be defined in the scene. The position of
-the light sources are defined relative to the camera or viewer, not
-the graph. Positive values for X, Y and Z positions lie to the right,
-upwards and towards the graph, respectively.
+The colour of solid surfaces and lines is determined by their
+intrinsic colour, plus an additive effect of lighting. The angle from
+the light source, the light source colour and intensity and the
+surface reflectively are used to calculate an additional colour
+contribution to the surface. Up to three light sources can be defined
+in the scene. The position of the light sources are defined relative
+to the camera or viewer, not the graph. Positive values for X, Y and Z
+positions lie to the right, upwards and towards the graph,
+respectively.
 
 |[Light angle 1](/media/3d_refl_1.vsz) |[Light angle 2](/media/3d_refl_2.vsz) |
 |--------------------------------------|--------------------------------------|
