--- a/_posts/2018-06-03-veusz-3d.md
+++ b/_posts/2018-06-03-veusz-3d.md
@@ -1,12 +1,20 @@
 ---
 layout: post
-title: "Making 3D plots in Veusz"
+title: "Veusz 3.0 is actually Veusz 3D"
 date: 2018-06-03
 ---
 
-Veusz 3.0 includes support for 3D plots. Currently implemented plot
-types include point plots, surface plots, functional surface and line
-plots and volume plots. This post is a guide for how this works.
+Veusz has long existed as a 2D-only plotting GUI application and
+library. From version 3, Veusz now supports several types of 3D
+plots. As with previous versions of Veusz, plots are flexibly built
+out of a number of plotting widgets, allowing several 3D graphs to
+occupy a 3D space.  Currently implemented plot types include 3D
+points, line, data surface, functional surface, functional line and
+volume plots. This post is a guide for how this works.
+
+|[3D example](/media/3d_example.vsz) |
+|------------------------------------|
+|![3d example](/media/3d_example.png)|
 
 ## The 3D scene (scene3d)
 
