--- a/_posts/2018-06-03-veusz-3d.md
+++ b/_posts/2018-06-03-veusz-3d.md
@@ -12,9 +12,7 @@ occupy a 3D space.  Currently implemented plot types include 3D
 points, line, data surface, functional surface, functional line and
 volume plots. This post is a guide for how this works.
 
-|[3D example](/media/3d_example.vsz) |
-|------------------------------------|
-|![3d example](/media/3d_example.png)|
+![3d example](/media/3d_example.png) [3D example](/media/3d_example.vsz)
 
 ## The 3D scene (scene3d)
 
